# thewar_client

./: .gitignore  CMakeLists.txt  help_functions.cpp  help_functions.h  move_producer.cpp  ru_gregpack_thewar_network_JNIMoveProducer.h  structures.h  your_ai.cpp  your_ai.h
